Tue May 27 17:27:30 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/object.rb : Revert previous revision of the address
	  derivation and revise memory binding of the representative array
	  element so that the reverse resolution by memory address can work.

Tue May 27 14:03:21 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/object.rb : Revise address derivation logic in order
	  not to bind the representative array element to a particular address.

Tue May 27 12:39:01 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/expr.rb : Fix array-subscript-expression evaluation to
	  refer the representative element of the array so that the
	  cross-reference to the array can be reported even if the subscript
	  points to the element eliminated by the adaptive array length
	  restriction.

Mon May 26 16:43:26 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/interp.rb : Fix restriction on evaluating number of
	  initializers in a initializer-list to be separated from the
	  restriction on the array length.

Sat May 24 23:07:23 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/interp.rb : Revert cancellation of length restriction
	  in initializer-list evaluation to shorten analysis time and tune
	  parameters of the adaptive array length restriction.

Fri May 23 18:12:24 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/syntax.rb : Correct to run on ruby 2.1.2p95 without
	  warnings.

Fri May 23 18:02:39 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/interp.rb : Add unused global variable elimination to
	  reduce memory usage.
	* lib/adlint/cc1/syntax.rb : Ditto.
	* spec/adlint/cc1/ctrlexpr_spec.rb : Ditto.

	* lib/adlint/cc1/type.rb : Support adaptive size limiter of the actual
	  array object.

	* features/code_check/W1031.feature : Fix typo.

Thu May 22 15:53:19 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>
