@@ -1,3 +1,9 @@
+Tue May 27 18:28:58 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>
+
+	* lib/adlint/cc1/expr.rb : Fix array-subscript-expression evaluation in
+	  order not to derive the representative array element if the definite
+	  subscript value is out of bound.
+
 Tue May 27 17:27:30 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>
 
 	* lib/adlint/cc1/object.rb : Revert previous revision of the address
